--- a/_posts/2017-12-11-NTP配置.md
+++ b/_posts/2017-12-11-NTP配置.md
@@ -3,8 +3,9 @@ layout: post
 title: "NTP配置"
 description: "shell"
 tags: [Linux]
-image:
-  feature: time.jpg
+share: false
+#image:
+#  feature: time.png
 ---
 
 ## 基本命令  
